--- a/estilo.css
+++ b/estilo.css
@@ -7,7 +7,17 @@ html {
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: lightblue;
+}
+body, h1, h2, p {
     margin: 0;
     padding: 0;
 }
-
+h1 {
+    text-align: center;
+}
+main {
+    display: flex;
+    background-color: white;
+    width: 80%;
+    margin: auto;
+}
